Put RYM output into a textarea
Putting the Rate Your Music in a textarea makes it easier to copy and
paste into RYM.

Fixes #4

--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
                             </table>
                         </div>
                         <div class="tab-pane fade" id="rym" role="tabpanel" aria-labelledby="rym-tab">
-                            <pre>{{
+                            <textarea class="form-control" rows="15" style="font-family: 'Courier New', Courier, monospace;">{{
                             tracks.map(track => `${track.number}|${track.title}|${track.time}`).join('\n')
-                        }}</pre>
+                        }}</textarea>
                         </div>
                     </div>
                 </div>
