--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             background-color: lightskyblue;
             padding: 2px 0 2px 0;
         }
+
+        .highlight {
+            background-color:powderblue;
+        }
     </style>
     <script>
         function escapeHtml(unsafe) {
@@ -52,6 +56,7 @@
                     newTrackTime: '',
                     lineMode: 'one-line',
                     refreshers: {},
+                    selectedRow: null
                 },
                 methods: {
                     parse() {
@@ -156,6 +161,9 @@
                     addRefresh(componentName, fn) {
                         this.refreshers[componentName] = fn;
                     },
+                    highlightTableRow(trackId){
+                        this.selectedRow = trackId
+                    }
                 }
             })
         })
@@ -248,7 +256,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr v-for="track in tracks" :key="track.id">
+                                    <tr v-for="track in tracks" :key="track.id"  v-on:mouseenter="highlightTableRow(track.id)" :class="{'highlight': (track.id == selectedRow)}">
                                         <th scope="row" @click="track.editingNumber = true">
                                             <span v-if="!track.editingNumber">{{ track.number }}</span>
                                             <input type="text" class="form-control" v-model="track.number"
