--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
                 .replace(/</g, "&lt;")
                 .replace(/>/g, "&gt;")
                 .replace(/"/g, "&quot;")
-                .replace(/'/g, "&#039;");
+                .replace(/'/g, "&#039;")
+                .replace(/`/g, "&#039;")
+                .replace(/[\u2018\u2019]/g, "&#039;")
+                .replace(/[\u201C\u201D]/g, "&quot;");
         }
 
         document.addEventListener('DOMContentLoaded', function () {
