--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         }
     </style>
     <script>
+        // This URL is hardcoded to the version I can deploy. If you deploy your
+        // own copy you can change this accordingly.
+        const importDomain = '5yni5j4wsk.execute-api.us-east-1.amazonaws.com';
+        const importEnv = 'production';
+
         function escapeHtml(unsafe) {
             return unsafe
                 .replace(/&/g, "&amp;")
@@ -61,13 +66,32 @@
                     lineMode: 'one-line',
                     refreshers: {},
                     selectedRow: null,
-                    deselectedRow: null
+                    deselectedRow: null,
+                    importURL: '',
+                    importFrom: 'apple-music',
+                    importError: '',
                 },
                 methods: {
                     parse() {
                         this.tracks = parseTracks(this.rawTrackList, this.lineMode);
                         bootstrap.Modal.getInstance(document.getElementById('newModal')).hide();
                         this.refresh();
+                    },
+                    runImport() {
+                        const url = `https://${importDomain}/${importEnv}/${this.importFrom}?url=${encodeURIComponent(this.importURL)}`;
+                        fetch(url)
+                            .then(resp => resp.json())
+                            .then(resp => {
+                                if (resp.error) {
+                                    this.importError = resp.error;
+                                    return;
+                                }
+
+                                this.importError = '';
+                                this.tracks = [...resp.tracks.map(newTrack)];
+                                bootstrap.Modal.getInstance(document.getElementById('importModal')).hide();
+                                this.refresh();
+                            });
                     },
                     refresh() {
                         Object.values(this.refreshers).forEach(fn => fn());
@@ -192,6 +216,9 @@
                     &nbsp;&nbsp;&nbsp;
                     <button type="button" class="btn btn-warning" data-bs-toggle="modal"
                         data-bs-target="#newModal">Paste from Anywhere...</button>
+                    &nbsp;&nbsp;&nbsp;
+                    <button type="button" class="btn btn-warning" data-bs-toggle="modal"
+                        data-bs-target="#importModal">Import From...</button>
                 </div>
             </div>
         </div>
@@ -330,7 +357,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="newModalLabel">Paste Track List</h5>
+                        <h5 class="modal-title" id="newModalLabel">Paste From Anywhere...</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -348,6 +375,42 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                         <button type="button" class="btn btn-primary" v-on:click="parse()">Let's Do It!</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="importModal" tabindex="-1" aria-labelledby="importModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="importModalLabel">Import From...</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="alert alert-danger" role="alert" v-if="importError">
+                          {{ importError }}
+                        </div>
+                        <select class="form-select" aria-label="From" v-model="importFrom">
+                          <option value="apple-music" selected>Apple Music</option>
+                        </select>
+                        <br />
+                        Within Apple Music, use
+                        <strong>Share > Copy Link</strong> and paste it below.
+                        An example URL looks like:
+                        <br />
+                        <ul>
+                            <li> 
+                                <a href="https://music.apple.com/us/album/nye-2022-dj-mix/1600990821" target="_blank">
+                                    https://music.apple.com/us/album/nye-2022-dj-mix/1600990821
+                                </a>
+                            </li>
+                        </ul>
+                        <input type="text" class="form-control" v-model="importURL" placeholder="URL" />
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" v-on:click="runImport()">Let's Do It!</button>
                     </div>
                 </div>
             </div>
