--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Track Editor</title>
+    <title>Tracklist Editor</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="parse.js"></script>
     <script src="actions/capitalize-action.js"></script>
@@ -207,7 +216,14 @@
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <h4>Tracklist Editor</h4>
+                    <table>
+                      <tbody>
+                        <tr>
+                          <td class="align-middle"><img src="favicon/android-chrome-192x192.png" height="36" width="36" /></td>
+                          <td class="align-middle h4" style="padding-left: 10px">Tracklist Editor</td>
+                        </tr>
+                      </tbody>
+                    </table>
                 </ul>
 
                 <div class="text-end">
@@ -361,7 +377,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        Track Editor will do its best to decipher whatever input you give it.
+                        Tracklist Editor will do its best to decipher whatever input you give it.
                         <br /><br />
                         <select class="form-select" aria-label="Line mode" v-model="lineMode">
                           <option value="one-line" selected>One line per track</option>
