--- a/index.html
+++ b/index.html
@@ -417,6 +417,7 @@
                         </div>
                         <select class="form-select" aria-label="From" v-model="importFrom">
                           <option value="apple-music" selected>Apple Music</option>
+                          <option value="discogs">Discogs</option>
                           <option value="spotify">Spotify</option>
                         </select>
                         <br />
@@ -430,6 +431,19 @@
                                 <li> 
                                     <a href="https://music.apple.com/us/album/nye-2022-dj-mix/1600990821" target="_blank">
                                         https://music.apple.com/us/album/nye-2022-dj-mix/1600990821
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div v-if="importFrom === 'discogs'">
+                            Copy the URL of a discogs page and paste it below.
+                            An example URL looks like:
+                            <br />
+                            <ul>
+                                <li> 
+                                    <a href="https://www.discogs.com/master/146065-OneRepublic-Dreaming-Out-Loud" target="_blank">
+                                        https://www.discogs.com/master/146065-OneRepublic-Dreaming-Out-Loud
                                     </a>
                                 </li>
                             </ul>
